--- a/bryce-cloud-common/bryce-common-elasticsearch/pom.xml
+++ b/bryce-cloud-common/bryce-common-elasticsearch/pom.xml
@@ -4,23 +4,25 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.brycehan.cloud</groupId>
-        <artifactId>bryce-cloud</artifactId>
+        <artifactId>bryce-cloud-common</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>bryce-cloud-common</artifactId>
+    <artifactId>bryce-common-elasticsearch</artifactId>
     <version>${revision}</version>
-    <name>bryce-cloud-common</name>
-    <description>bryce-cloud-common</description>
+    <name>bryce-common-elasticsearch</name>
+    <description>bryce-common-elasticsearch</description>
     <packaging>pom</packaging>
 
-    <modules>
-        <module>bryce-common-cloud</module>
-        <module>bryce-common-core</module>
-        <module>bryce-common-elasticsearch</module>
-        <module>bryce-common-mybatis</module>
-        <module>bryce-common-rabbitmq</module>
-        <module>bryce-common-seata</module>
-    </modules>
+    <!-- 依赖 -->
+    <dependencies>
+
+        <!-- Data Elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
