--- a/bryce-cloud-common/bryce-common-seata/pom.xml
+++ b/bryce-cloud-common/bryce-common-seata/pom.xml
@@ -17,7 +17,7 @@
     <!-- 依赖 -->
     <dependencies>
 
-        <!-- 阿里巴巴 Seata -->
+        <!-- Seata -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
