重构接口模块

--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -28,7 +28,11 @@
         </dependency>
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
-            <artifactId>bryce-cloud-api</artifactId>
+            <artifactId>bryce-cloud-system-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-cloud-sms-api</artifactId>
         </dependency>
         <!-- 测试框架 -->
         <dependency>
