--- a/bryce-cloud-module/bryce-cloud-sms/src/main/resources/application.yml
+++ b/bryce-cloud-module/bryce-cloud-sms/src/main/resources/application.yml
@@ -18,12 +18,8 @@ spring:
         group: bryce-cloud
   config:
     import:
-      - optional:nacos:application.yaml
-      - optional:nacos:application-bryce.yaml
-      - optional:nacos:application-task.yaml
-      - optional:nacos:application-sms.yaml
+      - optional:nacos:application-common.yaml
       - optional:nacos:application-cache.yaml
-
-logging:
-  level:
-    com.brycehan: info
+      - optional:nacos:application-endpoint.yaml
+      - optional:nacos:application-sentinel.yaml
+      - optional:nacos:bryce-cloud-sms.yaml
