--- a/bryce-cloud-api/pom.xml
+++ b/bryce-cloud-api/pom.xml
@@ -12,22 +12,11 @@
     <version>${revision}</version>
     <name>bryce-cloud-api</name>
     <description>bryce-cloud-api</description>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
-    <!-- 依赖 -->
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.brycehan.cloud</groupId>
-            <artifactId>bryce-common-core</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>bryce-cloud-sms-api</module>
+        <module>bryce-cloud-system-api</module>
+    </modules>
 
 </project>
