--- a/bryce-cloud-auth/src/main/resources/application.yml
+++ b/bryce-cloud-auth/src/main/resources/application.yml
@@ -6,26 +6,32 @@ server:
 spring:
   application:
     name: bryce-cloud-auth
+  profiles:
+    active: dev
   cloud:
     nacos:
       # 服务地址
       server-addr: localhost:8848
       discovery:
-        namespace: dev
+        namespace: ${spring.profiles.active}
         group: bryce-cloud
       config:
-        namespace: dev
+        namespace: ${spring.profiles.active}
         group: bryce-cloud
   config:
     import:
-      - optional:nacos:application.yaml
-      - optional:nacos:application-bryce.yaml
-      - optional:nacos:application-task.yaml
-      - optional:nacos:application-sms.yaml
+      - optional:nacos:application-common.yaml
       - optional:nacos:application-cache.yaml
+      - optional:nacos:application-endpoint.yaml
+      - optional:nacos:application-feign.yaml
+      - optional:nacos:application-sentinel.yaml
       - optional:nacos:bryce-cloud-auth.yaml
 
-logging:
-  level:
-    com.brycehan: info
-
+---
+#spring:
+#  profiles:
+#    active: prod
+#  cloud:
+#    nacos:
+#      # 服务地址
+#      server-addr: nacos:8848
