--- a/bryce-cloud-module/bryce-cloud-sms/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-sms/pom.xml
@@ -24,7 +24,11 @@
         </dependency>
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
-            <artifactId>bryce-cloud-api</artifactId>
+            <artifactId>bryce-cloud-system-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-cloud-sms-api</artifactId>
         </dependency>
         <!-- sms短信框架 -->
         <dependency>
