--- a/bryce-cloud-common/bryce-common-security/pom.xml
+++ b/bryce-cloud-common/bryce-common-security/pom.xml
@@ -18,6 +18,10 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-cloud-system-api</artifactId>
+        </dependency>
         <!-- Web安全 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
