--- a/bryce-cloud-gateway/src/main/resources/application.yml
+++ b/bryce-cloud-gateway/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
     import:
       - optional:nacos:application-endpoint.yaml
       - optional:nacos:application-sentinel.yaml
+      - optional:nacos:application-jwt.yaml
       - optional:nacos:bryce-cloud-gateway.yaml
 
 knife4j:
