--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<revision>0.0.1-SNAPSHOT</revision>
 		<!-- Java 版本 -->
 		<java.version>17</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<skipTests>true</skipTests>
