--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
         <!-- jwt 令牌 -->
         <dependency>
             <groupId>com.auth0</groupId>
