--- a/bryce-cloud-module/bryce-cloud-system/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-system/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-cloud-system-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-cloud-storage-api</artifactId>
+        </dependency>
         <!-- 代码生成器 -->
         <dependency>
             <groupId>com.brycehan.boot</groupId>
