--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.brycehan.cloud</groupId>
+				<artifactId>bryce-cloud-storage-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.brycehan.cloud</groupId>
 				<artifactId>bryce-cloud-system-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
