添加刷新令牌接口；添加TransmittableThreadLocal登录上下文信息；修复Swagger ui登录无效问题

--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
         <!-- jwt 令牌 -->
         <dependency>
             <groupId>com.auth0</groupId>
