--- a/bryce-cloud-common/bryce-common-mybatis/pom.xml
+++ b/bryce-cloud-common/bryce-common-mybatis/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!-- Seata -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
