--- a/bryce-cloud-auth/src/main/resources/application.yml
+++ b/bryce-cloud-auth/src/main/resources/application.yml
@@ -6,18 +6,21 @@ server:
 spring:
   application:
     name: bryce-cloud-auth
+  mvc:
+    servlet:
+      load-on-startup: 0
   profiles:
-    active: dev
+    active: @profiles.active@
   cloud:
     nacos:
       # 服务地址
-      server-addr: localhost:8848
+      server-addr: @nacos.server-addr@
       discovery:
-        namespace: ${spring.profiles.active}
-        group: bryce-cloud
+        namespace: @nacos.namespace@
+        group: @nacos.group@
       config:
-        namespace: ${spring.profiles.active}
-        group: bryce-cloud
+        namespace: @nacos.namespace@
+        group: @nacos.group@
   config:
     import:
       - optional:nacos:application-common.yaml
@@ -28,11 +31,3 @@ spring:
       - optional:nacos:application-jwt.yaml
       - optional:nacos:bryce-cloud-auth.yaml
 
----
-#spring:
-#  profiles:
-#    active: prod
-#  cloud:
-#    nacos:
-#      # 服务地址
-#      server-addr: nacos:8848
