--- a/bryce-cloud-api/bryce-cloud-email-api/pom.xml
+++ b/bryce-cloud-api/bryce-cloud-email-api/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!-- HttpClient的依赖 -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
@@ -27,11 +32,6 @@
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-core</artifactId>
-        </dependency>
-        <!--httpClient的依赖 -->
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-httpclient</artifactId>
         </dependency>
     </dependencies>
 
