--- a/bryce-cloud-api/bryce-cloud-email-api/pom.xml
+++ b/bryce-cloud-api/bryce-cloud-email-api/pom.xml
@@ -20,10 +20,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
-        <!-- HttpClient的依赖 -->
+        <!-- Feign HttpClient 5 的依赖 -->
         <dependency>
             <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-httpclient</artifactId>
+            <artifactId>feign-hc5</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
