refactor(framework): 重构项目框架
- 移除各个模块中的 @EnableDiscoveryClient 注解- 更新 Feign 客户端定义，引入新的 client 包- 修改 FallbackFactory 实现类，适配新的 client 接口
- 更新日志处理逻辑，优化异常日志记录
-调整部分依赖，移除不必要的测试框架

--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -34,11 +34,9 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-cloud-sms-api</artifactId>
         </dependency>
-        <!-- 测试框架 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
