--- a/bryce-cloud-module/bryce-cloud-system/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-system/pom.xml
@@ -39,22 +39,10 @@
             <artifactId>bryce-cloud-storage-api</artifactId>
         </dependency>
         <!-- 代码生成器 -->
-        <dependency>
-            <groupId>com.brycehan.boot</groupId>
-            <artifactId>bryce-generator-boot-starter</artifactId>
-        </dependency>
-        <!-- 测试框架 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- Spring Security 安全测试 -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.brycehan.boot</groupId>-->
+<!--            <artifactId>bryce-generator-boot-starter</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <!-- 构建 -->
