actorref(bryce-cloud):重构项目模块和依赖
- 新增 bryce-common-api 模块，用于定义通用的 API接口
- 新增 bryce-common-server 模块，用于实现通用的服务器功能
-移除 bryce-common-security模块中的冗余代码和依赖
- 更新各模块之间的依赖关系
- 删除未使用的第三方库依赖

--- a/bryce-cloud-api/bryce-cloud-email-api/pom.xml
+++ b/bryce-cloud-api/bryce-cloud-email-api/pom.xml
@@ -17,21 +17,12 @@
     <!-- 依赖 -->
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <!-- Feign HttpClient 5 的依赖 -->
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-hc5</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
-            <artifactId>bryce-common-core</artifactId>
+            <artifactId>bryce-common-api</artifactId>
         </dependency>
     </dependencies>
 
